fix(navbar): alignments (#94)

--- a/src/theme/_forms.scss
+++ b/src/theme/_forms.scss
@@ -28,7 +28,7 @@ form {
 	[type=email].form-control,
 	[type=tel].form-control,
 	[contenteditable].form-control {
-		@include box-shadow(inset 0 -1px 0 #DDD);
+		@include box-shadow(inset 0 -1px 0 $alto);
 		padding: 0;
 		border: none;
 		border-radius: 0;
@@ -41,7 +41,7 @@ form {
 		&[disabled],
 		&[readonly] {
 			@include box-shadow(none);
-			border-bottom: 1px dotted #DDD;
+			border-bottom: 1px dotted $alto;
 		}
 
 		&.input {
@@ -57,7 +57,7 @@ form {
 
 	select,
 	select.form-control {
-		@include box-shadow(inset 0 -1px 0 #DDD);
+		@include box-shadow(inset 0 -1px 0 $alto);
 		border: none;
 		border-radius: 0;
 		appearance: none;
