--- a/src/theme/_guidelines.scss
+++ b/src/theme/_guidelines.scss
@@ -61,7 +61,7 @@ $modal-header-color: $white !default;
 
 /// Navbar brand logo width
 /// @type Number (Unit)
-$navbar-brand-logo-width: 90px !default;
+$navbar-brand-logo-width: 100px !default;
 
 /// Navbar form top and bottom width
 /// @type Number (Unit)
